--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
     <section id="container">
         <h2 id="vibhram"> < ViBhram > </h2>
-        <h1 id="toph"> A visonary tech company </h1>        
+        <h1 id="toph"> A visionary tech company </h1>        
         <img src="Images/logo.PNG" >    
         <button> Explore >> </button>    
         <p>We are here to change to way 
