--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 id="toph"> A visionary tech company </h1>        
         <img src="Images/logo.PNG" >    
         <button> Explore >> </button>    
-        <p>We are here to change to way 
+        <p>We are here to change the way 
             you interact with the world.</p>  
         <!-- <h1 id="bottomh"> Wish you happy deepavali </h1> -->
         <script type="text/javascript" src="vib.js"></script>
